--- a/static/css/registerStyle.css
+++ b/static/css/registerStyle.css
@@ -114,4 +114,17 @@ body {
 
 #pwInfo {
     visibility: hidden;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    left: 350px;
+    top: 235px;
+}
+#phoneInfo {
+    visibility: hidden;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    left: 350px;
+    top: 300px;
 }
